4.6.2
=====
- Properly set orientation of tasklist handler (bug #5222).
- Fix launcher with 'Run in Terminal' (part of bug #5301).
- Fix typo preventing build on older gtk versions.


4.6.1
=====
- Migrate launcher category icons from 4.4 panels (bug #5067).
- Fix compilation with -Wl,--as-needed (bug #5103).
- Don't crash when the quit action button is pressed (bug #5118).
- Properly set the systray orientation property (bug #5149).
- Fix xfce-hvbox not working with gtk 2.16 (bug #5166).
- Don't crash the launcher plugin when the launcher entry list is empty.
- Add icon-name fallback to the show desktop plugin (bug #5117).
- Disconnect the icon theme changed signal from a launcher when it
  is destroyed to avoid crash when the icon theme changes.
- Fix drawing dots mode of the seperator plugin in a vertical panel (bug #5162).
- Fix a possible crash when setting the session restart style on an
  uninitialized client session.
- A whole bunch of translation updated (pl, es, pt, ja, es, gl, nb, pt_PT).


4.6.0
======
- Block panel autohide if the widget is grabbed (bug #4597).
- Fix dragging to launcher submenu items (bug #4026).
- Send the event time with startup notification instead
  of zero, so focus stealing works properly.
- Set the foreground color of the lcd clock (bug #4923).
- Don't escape the command when dropping a .desktop file in the
  launcher dialog (bug #4818).


4.5.99.1
========
- Fixed extern char** environ is not defined on BSD platforms (bug #4834).


4.5.93
======
- Cache tooltip icons. Since gtk queries it a lot, resulting in too many
  open()'s for loading the pixbuf (bug #4614).
- Rebuild the plugin if the properties dialog is cancelled (bug #4612).
- Set DISPLAY variable so the launcher launches on the correct screen
  (bug #4654 and #4693)).
- Add missing functions in the symbols file (bug #4700).
- Added a libxfce4panel.h header that includes all other headers for
  plugin writers.
- Use -V for version information.