@@ -3,6 +3,7 @@
 - Properly set orientation of tasklist handler (bug #5222).
 - Fix launcher with 'Run in Terminal' (part of bug #5301).
 - Fix typo preventing build on older gtk versions.
+- Don't send -r to session restart command (bug #5454).
 
 
 4.6.1
